# 2D-Aircraft-Shooter-Game

./: CMakeLists.txt
shootGame/: main.cpp  shootGame.cbp  shootGame.depend  shootGame.layout
shootGame/include/: Game.h  ResourceHolder.h  TextureHolder.h
shootGame/src/: Game.cpp  TextureHolder.cpp
